--- a/css/estilos.css
+++ b/css/estilos.css
@@ -56,7 +56,8 @@ header #contenidoCabecera {
 }
 
 #imagenCentral img,
-#imagenSecundaria img {
+#imagenSecundaria img,
+.contenedorImagenes img  {
     box-shadow: 2px 2px 6px rgba(0, 0, 0, 0.6);
 }
 
